# morphic

./: .gitignore  Cargo.toml  README.md  build.sh  package-lock.json  package.json
crates/morphic-wasm-web/: Cargo.toml  build.sh
crates/morphic-wasm-web/src/: lib.rs
crates/morphic-winit-impl/: Cargo.toml
crates/morphic-winit-impl/src/: lib.rs
crates/platform/morphic-platform-abstraction/: Cargo.toml
crates/platform/morphic-wasm-web/: .gitignore  Cargo.toml
crates/platform/morphic-winit-impl/: Cargo.toml
crates/platform/morphic-winit-impl/src/: lib.rs
crates/portal-solutions-morphic-wasm/: Cargo.toml  build.sh
crates/portal-solutions-morphic-wasm/src/: lib.rs  render.rs
