[workspace]
members = ["crates/morphic-wasm-web", "crates/morphic-winit-impl"]
resolver = "3"

[workspace.package]
license = "MPL-2.0"
description = "A modern UI and rendering framework, inspired by X11, SwiftUI, and the Web"

[workspace.dependencies]
atomic-waker = "1.1.2"
winit = { version = "0.30.12", default-features = false }