[workspace]
members = ["crates/morphic-platform-abstraction","crates/morphic-wasm-web", "crates/morphic-winit-impl"]
resolver = "3"

[workspace.package]
license = "MPL-2.0"
description = "A modern UI and rendering framework, inspired by X11, SwiftUI, and the Web"

[workspace.dependencies]
atomic-waker = "1.1.2"
winit = { version = "0.30.12", default-features = false }
morphic-winit-impl = {path="crates/morphic-winit-impl"}
morphic-platform-abstraction = {path="crates/morphic-platform-abstraction"}